--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
     "react-simple-infinite-loading": "^1.1.0",
+    "react-top-loading-bar": "^2.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
